--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <style>
          h2{
-        color: blue;
+        color: yellowgreen;
     }
     h1{
-        color: pink;
+        color: yellow;
     }
 
     </style>
