--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <style>
          h2{
-        color: yellowgreen;
+        color: red;
     }
     h1{
-        color: yellow;
+        color:blueviolet;
     }
 
     </style>
